# pyUGFX

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
cmake/: utils.cmake
docs/html/: annotated.html  annotated_dup.js  assert_8hpp_source.html  bind_group_8hpp_source.html  bind_group_layout_8hpp_source.html  buffer_8hpp.html  buffer_8hpp.js  buffer_8hpp__dep__incl.dot  buffer_8hpp__incl.dot  buffer_8hpp_source.html  classdiag_1_1_logger-members.html  classdiag_1_1_logger.html  classes.html  classgfx_1_1_command_buffer-members.html  classgfx_1_1_command_buffer.html  classgfx_1_1_command_buffer.js  classgfx_1_1_device-members.html  classgfx_1_1_device.html  classgfx_1_1_device.js  classgfx_1_1_device__coll__graph.dot  classgfx_1_1_device__inherit__graph.dot  classgfx_1_1_draw_stream_decoder-members.html  classgfx_1_1_draw_stream_decoder.html  classgfx_1_1_draw_stream_decoder.js  classgfx_1_1_draw_stream_decoder__coll__graph.dot  classgfx_1_1_draw_stream_encoder-members.html  classgfx_1_1_draw_stream_encoder.html  classgfx_1_1_draw_stream_encoder.js  classgfx_1_1_metal_device-members.html  classgfx_1_1_metal_device.html  classgfx_1_1_metal_device.js  classgfx_1_1_metal_device__coll__graph.dot  classgfx_1_1_metal_device__inherit__graph.dot  classgfx_1_1_metal_device_a03e4bde72c76e8117f8b6ef61c2bc244_cgraph.dot  classgfx_1_1_metal_window-members.html  classgfx_1_1_metal_window.html  classgfx_1_1_metal_window.js  classgfx_1_1_metal_window__coll__graph.dot  classgfx_1_1_metal_window__inherit__graph.dot  classgfx_1_1_metal_window_a85c414e7c9de108c3ab96bc391b853a8_icgraph.dot  (+416 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  defines_0.js  defines_1.js  defines_2.js  (+80 more)
import/: CMakeLists.txt  README.md
import/metal-headers/: CMakeLists.txt
import/metal-headers/include/: Metal.hpp
source/: CMakeLists.txt  README.md  main.cpp
source/RHI/: device.hpp  enums.hpp  window.hpp
source/RHI/render/: commands.hpp  passRenderer.hpp  renderer.hpp  uniforms.hpp
source/RHI/resources/: bindGroup.hpp  bindGroupLayout.hpp  buffer.hpp  dynamicBuffer.hpp  dynamicBuffers.hpp  dynamicBuffersLayout.hpp  frameBuffer.hpp  renderPass.hpp  renderPassLayout.hpp  resourceManger.hpp  sampler.hpp  shader.hpp  texture.hpp
source/backend/core/: assert.hpp  context.cpp  log.hpp
source/backend/metal/: metalCommon.hpp  metalDevice.cpp  metalEnums.hpp  metalWindow.hpp
source/backend/metal/resources/: metalBindGroup.cpp  metalBindGroup.hpp  metalBindGroupLayout.hpp  metalDynamicBuffers.cpp  metalDynamicBuffersLayout.hpp  metalResourceManger.hpp  metalTexture.cpp  metalTexture.hpp
source/backend/vulkan/: vma.cpp  vulkanCommon.hpp  vulkanDevice.cpp  vulkanDevice.hpp  vulkanEnums.cpp  vulkanEnums.hpp  vulkanGPUAllocator.cpp  vulkanGPUAllocator.hpp  vulkanWindow.cpp  vulkanWindow.hpp
source/backend/vulkan/render/: vulkanPassRenderer.cpp  vulkanPassRenderer.hpp  vulkanRenderer.cpp  vulkanRenderer.hpp
source/backend/vulkan/resources/: vulkanBindGroup.hpp  vulkanBindGroupLayout.cpp  vulkanBuffer.hpp  vulkanDynamicBuffers.hpp  vulkanResourceManger.cpp  vulkanResourceManger.hpp  vulkanSampler.cpp  vulkanShader.cpp  vulkanTexture.hpp
source/context/: common.hpp  context.hpp
source/core/: context.hpp
source/platform/context/: assert.hpp  context.cpp  log.cpp  log.hpp
source/platform/metal/: metalCommon.hpp  metalDevice.cpp  metalDevice.hpp  metalEnums.cpp  metalEnums.hpp  metalGlue.hpp  metalGlue.mm  metalWindow.cpp  metalWindow.hpp
source/platform/metal/resources/: metalBindGroup.hpp  metalBindGroupLayout.cpp  metalBindGroupLayout.hpp  metalBuffer.cpp  metalBuffer.hpp  metalDynamicBuffers.hpp  metalDynamicBuffersLayout.cpp  metalDynamicBuffersLayout.hpp  metalRenderPass.cpp  metalRenderPass.hpp  metalRenderPassLayout.cpp  metalRenderPassLayout.hpp  metalResourceManger.cpp  metalSampler.cpp  metalSampler.hpp  metalShader.cpp  metalShader.hpp  metalTexture.hpp
source/platform/vulkan/: vulkanCommon.hpp  vulkanDevice.cpp  vulkanDevice.hpp  vulkanEnums.cpp  vulkanEnums.hpp  vulkanGPUAllocator.cpp  vulkanGPUAllocator.hpp  vulkanWindow.cpp  vulkanWindow.hpp
source/platform/vulkan/render/: vulkanPassRenderer.cpp  vulkanPassRenderer.hpp  vulkanRenderer.cpp  vulkanRenderer.hpp
source/platform/vulkan/resources/: vulkanBindGroup.cpp  vulkanBindGroup.hpp  vulkanBindGroupLayout.hpp  vulkanBuffer.cpp  vulkanBuffer.hpp  vulkanDynamicBuffers.cpp  vulkanDynamicBuffers.hpp  vulkanDynamicBuffersLayout.cpp  vulkanDynamicBuffersLayout.hpp  vulkanMemAllocation.cpp  vulkanMemAllocation.hpp  vulkanRenderPass.cpp  vulkanRenderPass.hpp  vulkanRenderPassLayout.cpp  vulkanRenderPassLayout.hpp  vulkanResourceManger.cpp  vulkanResourceManger.hpp  vulkanSampler.hpp  vulkanShader.hpp  vulkanTexture.cpp  vulkanTexture.hpp
source/utils/: handle.hpp  pool.hpp  span.hpp
tests/: CMakeLists.txt  test1.cpp
